fix: handle truncated words in taskitem with tooltip (#1944)
* fix: handle truncated words with tooltip

* fix: fix taskitem storybook

* fix: rerun test

* fix: handle page resize

* fix: remove title and use item-title to prevent unwanted tooltip

* fix: change icon channel icon

* fix: address test failure

* fix: support title tooltip

* fix: rerun test

* fix: fix item title font weight

---------

--- a/web-components/src/components/taskitem/scss/settings.scss
+++ b/web-components/src/components/taskitem/scss/settings.scss
@@ -45,3 +45,5 @@ $taskitem-restyle-title-weight: 500;
 $taskitem-restyle-title-selected-weight: 700;
 $taskitem-restyle-font-size: rem-calc(14);
 $taskitem-restyle-title-font: $brand-font-regular;
+$taskitem-restyle-dot-size: rem-calc(4);
+$taskitem-restyle-queue-time-min-width: rem-calc(70);
